Add real OpenAPI definition and not implemented controller
